--- a/wp-content/themes/environics/assets/sass/navigation/_menus.scss
+++ b/wp-content/themes/environics/assets/sass/navigation/_menus.scss
@@ -9,6 +9,7 @@
 	width: 100%;
 	margin: 0 auto;
 	z-index: 9;
+	background-color: white;
 }
 
 .hamburger-container {
