--- a/wp-content/themes/environics/assets/sass/site/_media-queries.scss
+++ b/wp-content/themes/environics/assets/sass/site/_media-queries.scss
@@ -24,7 +24,7 @@
 	}
 
 	.site-content {
-		padding: 0 1rem 1rem;
+		padding: 76px 1rem 1rem;
 	}
 
 	header {
@@ -32,7 +32,7 @@
 	}
 
 	.site-branding img {
-		width: 235px;
+		width: 210px;
 		margin-top: 1rem;
 	}
 
